--- a/about.html
+++ b/about.html
@@ -3,15 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
-    <main>
+    <!-- Navbar here -->
+    <nav>
+        <ul>
+            <li><a  href="/index.html">Home</a></li>
+            <li><a href="/menu.html">Menu</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- Banner Image here-->
+    <img id="banner" src="/assets/images/banner.png" alt="banner-logo" style="width: 40%;height: 10%;">
+        <main>
         <!-- About page code here -->
+        <!-- An about page provides background on the restaurant, such as why the owner decided to open a
+restaurant. It could also mention the authenticity of the cuisine or information about the original
+location of the flagship restaurant, if it is now a chain. -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+            <ul>
+                <li>4864 Fowler Avenue</li>
+                <li>3381 Upland Avenue</li>
+                <li>564 George Avenue</li>
+                <li>1880 Bloomfield Way</li>
+            </ul>
+        <h2>Origin Story</h2>
+        <img src="/assets/images/about.jpg" alt="grains">
+<!-- Under Locations, make an unordered list and include at least four locations that you make up.
+Under Origin Story, place the image about.png (or use another image of your choice). Next, choose
+one of the locations from your list as the flagship location. Then, include a paragraph tag with a short
+story you make up about why the owner opened the restaurant in that particular location. You can
+make up a creative story or just use lorem ipsum text if you would like. -->
     </main>
 </body>
 </html>
