--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
-    <main>
+    <!-- Navbar here -->
+    <nav>
+        <ul>
+            <li><a  href="/index.html">Home</a></li>
+            <li><a href="/menu.html">Menu</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- Banner Image here-->
+    <img id="banner" src="/assets/images/banner.png" alt="banner-logo" style="width: 40%;height: 10%;">
+        <main>
         <h2>Hours of Operation</h2>
         <p>
             <strong>Monday-Friday:</strong> 11:00am-8:30pm
@@ -20,8 +29,17 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number: 207-595-5446</strong>
         </p>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+              integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+              crossorigin="anonymous"/>
+        <!-- Contact Page
+The contact page should begin with the hours of operation. This is provided in the starter code. Next,
+under the Contact Info h2 tag, include a phone number, address, and a customer service email that
+you make up on separate lines.
+Let's select Font Awesome icons to represent the phone number, email, and address. For example,
+we could use fa-phone for a phone icon. You can check out envelope for email and mapmarker or address-card for the address, or select other icons that you like. -->
     </main>
 </body>
 </html>
