--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <!-- Banner Image here-->
-    <img id="banner" src="/assets/images/banner.png" alt="banner-logo" style="width: 40%;height: 10%;">
+    <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
         <main>
         <h2>Hours of Operation</h2>
         <p>
