--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <!-- Banner Image here-->
-    <img id="banner" src="/assets/images/banner.png" alt="banner-logo" style="width: 40%;height: 10%;">
+    <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
     <main>
         <h1>H-Thai-ML</h1>
         <h2>the best Sizzlin Spicy Szechuan Stir-Fry in town!!</h2>
