--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <!-- Banner Image here-->
-    <img id="banner" src="/assets/images/banner.png" alt="banner-logo" style="width: 40%;height: 10%;">
+    <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
         <main>
         <!-- About page code here -->
         <!-- An about page provides background on the restaurant, such as why the owner decided to open a
