--- a/about.html
+++ b/about.html
@@ -21,9 +21,6 @@
     <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
         <main>
         <!-- About page code here -->
-        <!-- An about page provides background on the restaurant, such as why the owner decided to open a
-restaurant. It could also mention the authenticity of the cuisine or information about the original
-location of the flagship restaurant, if it is now a chain. -->
         <h1>About Us</h1>
         <h2>Locations</h2>
             <ul>
@@ -34,6 +31,14 @@ location of the flagship restaurant, if it is now a chain. -->
             </ul>
         <h2>Origin Story</h2>
         <img src="/assets/images/about.jpg" alt="grains">
+        <p>
+            It all started in with our first location! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo ullamcorper a lacus vestibulum sed arcu non odio. In mollis nunc sed id semper risus in hendrerit. Sapien pellentesque habitant morbi tristique senectus. In cursus turpis massa tincidunt dui. Tortor vitae purus faucibus ornare suspendisse. Sit amet mattis vulputate enim. Risus pretium quam vulputate dignissim suspendisse in est. Id donec ultrices tincidunt arcu non sodales neque sodales. Orci a scelerisque purus semper eget duis at. Eget velit aliquet sagittis id consectetur purus. Nulla aliquet enim tortor at.
+        </p>
+    </main>
+    <footer>
+        <p>Made with ❤️ at H-Thai-ML!</p>
+    </footer>
+        
 <!-- Under Locations, make an unordered list and include at least four locations that you make up.
 Under Origin Story, place the image about.png (or use another image of your choice). Next, choose
 one of the locations from your list as the flagship location. Then, include a paragraph tag with a short
