--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" 
+        href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+        crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
@@ -19,7 +23,7 @@
     </nav>
     <!-- Banner Image here-->
     <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
-        <main>
+    <main>
         <h2>Hours of Operation</h2>
         <p>
             <strong>Monday-Friday:</strong> 11:00am-8:30pm
@@ -29,17 +33,18 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number: 207-595-5446</strong>
+            <strong><i class="fa fa-phone"></i> Phone Number: 207-595-5446</strong>
         </p>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
-              integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
-              crossorigin="anonymous"/>
-        <!-- Contact Page
-The contact page should begin with the hours of operation. This is provided in the starter code. Next,
-under the Contact Info h2 tag, include a phone number, address, and a customer service email that
-you make up on separate lines.
-Let's select Font Awesome icons to represent the phone number, email, and address. For example,
-we could use fa-phone for a phone icon. You can check out envelope for email and mapmarker or address-card for the address, or select other icons that you like. -->
+        <p>
+            <strong><i class="fa fa-envelope"></i> Email:</strong>stacy@bob.com
+        </p>
+        <p>
+            <strong><i class="fa fa-address-card"></i> Address:</strong>
+            <p>8675309 Elm street</br>Scottsville, GA</p>
+        </p>
     </main>
+    <footer>
+        <p>Made with ❤️ at H-Thai-ML!</p>
+    </footer>
 </body>
 </html>
