--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
+    <div id="holiday">
+        <h1>Thanksgiving Holiday</h1>
+        <p>Our restaurant will be closed on November 25th and 26th in observance of the Thanksgiving holiday.</p>
+    </div>
     <!-- HOME PAGE -->
     <!-- Navbar here -->
     <nav>
@@ -21,7 +25,7 @@
     <div id="banner"><img src="/assets/images/banner.png" alt="banner-logo"></div>
     <main>
         <h1>H-Thai-ML</h1>
-        <h2>the best Sizzlin Spicy Szechuan Stir-Fry in town!!</h2>
+        <h2>the Best Sizzlin Spicy Szechuan Stir-Fry in town!!</h2>
         <!-- Home page code here-->
         <div class="service">
             <h3>Dine In</h3>
@@ -34,5 +38,8 @@
         </div>
         <img src="/assets/images/table-in-restaurant.jpg" alt="Our seating area">
     </main>
+    <footer>
+        <p>Made with ❤️ at H-Thai-ML!</p>
+    </footer>
 </body>
 </html>
